# spam-detection

./: .gitignore  README.md  THIRD_PARTY_NOTICES.txt  enron_spam.ipynb  init.sh  pyproject.toml  requirements.txt
docs/: .gitignore  bibtex.bib  main.tex  notes.md
hooks/: pre-commit
src/: .gitignore  README.md  bag_words.py  data.sh  data_encode.py  deploy_model_blind.py  embedding_matrix_gen.py  enron_spam.ipynb  integer_encode.py  model_eval_vis.py  model_evaluation.py  model_raw_values.py  model_visualization.py  model_visualizations.py  plot_models.R  sequence_encode.py  spam-detection.ipynb  train.py  train_rnn.py  train_svm.py
src/aux/: complement_classification_reports.py  plot_confusion_matrix.py
src/data/: .gitignore  X_test_subject.npy  X_train_subject.npy  X_valid_subject.npy  integer_index.pickle  y_test.npy  y_train.npy  y_valid.npy
src/data/blind/: .gitignore
src/data/char/: integer_index_char.pickle  readme.txt
src/data/enron/: .gitignore  enron_spam.sh
src/data/words/: integer_index.pickle  readme.txt
src/docs/: model-evaluation.md  models.md  pre-processing.md
src/pickles/: .gitignore  readme.txt
src/pickles/2019_07_06_20_44_19_rnn_words/: best_model_1.h5  log.csv
src/pickles/2019_07_06_20_44_19_rnn_words_random_embed/: classification_report_blind.txt  classification_report_test.txt  classification_report_test_optimal.txt  classification_report_train.txt  classification_report_valid.txt  log.csv  precision_recall_test.csv  prob_map_blind.npy  prob_map_test.npy  roc_blind.npy  roc_test.npy
src/tmp/: experiment.py
(+71 files in other folders)
