[tool.poetry]
name = "spam-detection"
version = "0.1.0"
description = ""
authors = ["Atreya Shankar <35427332+atreyasha@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.21.0"
matplotlib = "3.1.0"
pandas = "0.24.2"
Keras = "2.2.4"
nltk = "3.4.5"
tqdm = "4.32.1"
scikit-learn = "0.21.3"
tensorflow-gpu = "1.14.0"
PyYAML = "5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
